# covid-data-analysis

./: README.md  clean_data.py  data_cleaning_process.md  pyproject.toml
data/: covid-data-cleaned.csv  covid-data.csv
