[tool.poetry]
name = "covid-analysis"
version = "0.1.0"
description = "COVID-19 Data Analysis and Visualization"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
